--- a/arch/arm/boot/dts/qcom/msm8937-pmi8950-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-pmi8950-mtp.dtsi
@@ -16,14 +16,21 @@
 #include "msm8937-audio-mtp.dtsi"
 
 &soc {
-	led_flash0: qcom,camera-flash@0 {
+	led_flash0: qcom,camera-flash {
 		cell-index = <0>;
 		compatible = "qcom,camera-flash";
 		qcom,flash-type = <1>;
-		//wangyanhui add for front flightlight start
-		qcom,flash-source = <&pmi8950_flash0 &pmi8950_flash1  &pmi8950_flash2>;
-		qcom,torch-source = <&pmi8950_torch0 &pmi8950_torch1  &pmi8950_torch2>;
-		//wangyanhui add for front flightlight end
+		qcom,flash-source = <&pmi8950_flash0 &pmi8950_flash1>;
+		qcom,torch-source = <&pmi8950_torch0 &pmi8950_torch1>;
+		qcom,switch-source = <&pmi8950_switch>;
+	};
+
+	led_flash1: qcom,camera-flash {
+		cell-index = <0>;
+		compatible = "qcom,camera-flash";
+		qcom,flash-type = <1>;
+		qcom,flash-source = <&pmi8950_flash0 &pmi8950_flash2>;
+		qcom,torch-source = <&pmi8950_torch0 &pmi8950_torch2>;
 		qcom,switch-source = <&pmi8950_switch>;
 	};
 };
