arch: dts: Add PA control DT

--- a/arch/arm/boot/dts/qcom/msm8937-audio-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-audio-mtp.dtsi
@@ -17,6 +17,7 @@
 	qcom,msm-mbhc-hphl-swh = <1>;
 	qcom,msm-hs-micbias-type = "internal";
 	qcom,msm-spk-ext-pa = <&tlmm 126 0>;
+	qcom,msm-spk-ext-pa-compatible = <&tlmm 89 0>;
 };
 
 &pm8937_cajon_dig {
