arch: dts: Add garlic device tree files

--- a/arch/arm/boot/dts/qcom/msm8937-audio-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-audio-mtp.dtsi
@@ -14,7 +14,9 @@
 &int_codec {
 	status = "okay";
 	qcom,model = "msm8952-snd-card-mtp";
-	qcom,msm-hs-micbias-type = "external";
+	qcom,msm-mbhc-hphl-swh = <1>;
+	qcom,msm-hs-micbias-type = "internal";
+	qcom,msm-spk-ext-pa = <&tlmm 126 0>;
 };
 
 &pm8937_cajon_dig {
