--- a/arch/arm/boot/dts/qcom/msm-pmi8937.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8937.dtsi
@@ -31,7 +31,7 @@
 			reg = <0x800 0x100>;
 			qcom,secondary-pon-reset;
 			qcom,hard-reset-poweroff-type =
-				<PON_POWER_OFF_SHUTDOWN>;
+				<PON_POWER_OFF_HARD_RESET>;
 
 			pon_perph_reg: qcom,pon_perph_reg {
 				regulator-name = "pon_spare_reg";
