--- a/arch/arm/boot/dts/qcom/msm8937-mdss-panels.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-mdss-panels.dtsi
@@ -24,6 +24,8 @@
 #include "dsi-panel-truly-720p-cmd.dtsi"
 #include "dsi-panel-lead-fl10802-fwvga-video.dtsi"
 
+#include "dsi-panel-nt35595-sharp-1080p-cmd.dtsi"
+
 &soc {
 	dsi_panel_pwr_supply: dsi_panel_pwr_supply {
 		#address-cells = <1>;
