--- a/drivers/input/Kconfig
+++ b/drivers/input/Kconfig
@@ -207,6 +207,9 @@ source "drivers/input/touchscreen/Kconfig"
 
 source "drivers/input/misc/Kconfig"
 
+#zenghaihui add for fingerprint
+source "drivers/input/fingerprint/Kconfig"
+
 endif
 
 menu "Hardware I/O ports"
