--- a/drivers/input/fingerprint/Makefile
+++ b/drivers/input/fingerprint/Makefile
@@ -2,5 +2,6 @@
 # Makefile for the fingerprint drivers.
 #
 
+obj-y	+=  fp_drv/
 obj-$(CONFIG_FINGERPRINT_ELAN) += elan_new/
 obj-$(CONFIG_FINGERPRINT_GOODIX_GFX1XM) += gfx1xm/
