--- a/arch/arm/boot/dts/qcom/msm8937-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-mtp.dtsi
@@ -28,9 +28,9 @@
 };
 
 &soc {
-       led_flash1: qcom,camera-led-flash {
+       led_flash1: qcom,camera-flash {
                cell-index = <2>;
-               compatible = "qcom,camera-led-flash";
+               compatible = "qcom,camera-flash";
                qcom,flash-type = <1>;
                qcom,flash-name = "led_flash1";
                qcom,gpio-no-mux = <0>;
