--- a/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
@@ -205,12 +205,9 @@
 			compatible = "qcom,qpnp-smbcharger";
 			#address-cells = <1>;
 			#size-cells = <1>;
-
-
 			qcom,iterm-ma = <250>;
 			qcom,float-voltage-mv = <4400>;
 			qcom,resume-delta-mv = <200>;
-
 			qcom,fastchg-current-ma = <1500>;
 			qcom,chg-inhibit-fg;
 			qcom,rparasitic-uohm = <100000>;
@@ -220,14 +217,10 @@
 			qcom,force-aicl-rerun;
 			qcom,aicl-rerun-period-s = <180>;
 			qcom,autoadjust-vfloat;
-
 			qcom,float-voltage-comp = <13>;
 			qcom,fastchg-current-comp = <700>;
-
 			qcom,no-parallel-defualt-dcp-icl-ma = <1400>;
-
 			qcom,no_support_qc;
-
 			qcom,speed-current = <1500 1400 1200 1100 900 700 600 450 400 0>;
 
 			qcom,chgr@1000 {
@@ -333,7 +326,7 @@
 			qcom,fg-cc-cv-threshold-mv = <4390>;
 
 			qcom,hold-soc-while-full;
-			qcom,vbat-estimate-diff-mv =<40>;
+			qcom,vbat-estimate-diff-mv =<120>;
 			qcom,resume-soc = <98>;
 			status = "okay";
 			qcom,bcl-lm-threshold-ma = <127>;
@@ -343,7 +336,7 @@
 
 			qcom,fg-chg-iterm-ma = <250>;
 			qcom,pmic-revid = <&pmi8950_revid>;
-			qcom,fg-cutoff-voltage-mv = <3400>;
+			qcom,fg-cutoff-voltage-mv = <3300>;
 			qcom,cycle-counter-en;
 			qcom,ext-sense-type;
 
@@ -453,7 +446,6 @@
 				qcom,use-blink;
 			};
 		};
-
 	};
 
 	qcom,pmi8950@3 {
@@ -461,8 +453,6 @@
 		reg = <0x3>;
 		#address-cells = <1>;
 		#size-cells = <1>;
-
-
 
 		pmi8950_pwm: pwm@b000 {
 				compatible = "qcom,qpnp-pwm";
@@ -492,10 +482,8 @@
 				reg = <0xdc00 0x100>;
 				reg-names = "ibb_reg";
 				regulator-name = "ibb_reg";
-
 				regulator-min-microvolt = <4600000>;
 				regulator-max-microvolt = <6000000>;
-
 				qcom,qpnp-ibb-min-voltage = <1400000>;
 				qcom,qpnp-ibb-step-size = <100000>;
 				qcom,qpnp-ibb-slew-rate = <2000000>;
@@ -503,14 +491,11 @@
 				qcom,qpnp-ibb-init-voltage = <5500000>;
 				qcom,qpnp-ibb-init-amoled-voltage = <4000000>;
 				qcom,qpnp-ibb-init-lcd-voltage = <5500000>;
-
 				qcom,qpnp-ibb-soft-start = <1000>;
-
 				qcom,qpnp-ibb-discharge-resistor = <32>;
 				qcom,qpnp-ibb-lab-pwrup-delay = <8000>;
 				qcom,qpnp-ibb-lab-pwrdn-delay = <8000>;
 				qcom,qpnp-ibb-en-discharge;
-
 				qcom,qpnp-ibb-full-pull-down;
 				qcom,qpnp-ibb-pull-down-enable;
 				qcom,qpnp-ibb-switching-clock-frequency = <1480>;
@@ -524,10 +509,8 @@
 				reg = <0xde00 0x100>;
 				reg-names = "lab";
 				regulator-name = "lab_reg";
-
 				regulator-min-microvolt = <4600000>;
 				regulator-max-microvolt = <6000000>;
-
 				qcom,qpnp-lab-min-voltage = <4600000>;
 				qcom,qpnp-lab-step-size = <100000>;
 				qcom,qpnp-lab-slew-rate = <5000>;
@@ -535,13 +518,10 @@
 				qcom,qpnp-lab-init-voltage = <5500000>;
 				qcom,qpnp-lab-init-amoled-voltage = <4600000>;
 				qcom,qpnp-lab-init-lcd-voltage = <5500000>;
-
 				qcom,qpnp-lab-soft-start = <800>;
-
 				qcom,qpnp-lab-full-pull-down;
 				qcom,qpnp-lab-pull-down-enable;
-				qcom,qpnp-lab-switching-clock-frequency =
-									<1600>;
+				qcom,qpnp-lab-switching-clock-frequency = <1600>;
 				qcom,qpnp-lab-limit-maximum-current = <800>;
 				qcom,qpnp-lab-limit-max-current-enable;
 				qcom,qpnp-lab-ps-threshold = <40>;
@@ -550,7 +530,6 @@
 				qcom,qpnp-lab-pfet-size = <100>;
 				qcom,qpnp-lab-max-precharge-time = <500>;
 			};
-
 		};
 
 		wled: qcom,leds@d800 {
@@ -640,7 +619,6 @@
 				qcom,current = <625>;
 			};
 
-
 			pmi8950_torch0: qcom,torch_0 {
 				label = "torch";
 				qcom,led-name = "led:torch_0";
@@ -672,7 +650,6 @@
 
 			};
 
-
 			pmi8950_switch: qcom,switch {
 				label = "switch";
 				qcom,led-name = "led:switch";
@@ -686,8 +663,6 @@
 					regulator-name = "pon_spare_reg";
 				};
 			};
-
-
 		};
 
 		pmi_haptic: qcom,haptic@c000 {
