--- a/arch/arm/boot/dts/qcom/msm8937-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-mtp.dtsi
@@ -35,8 +35,6 @@
 		pinctrl-0 = <&gpio_key_active>;
 		pinctrl-1 = <&gpio_key_suspend>;
 
-
-
 		vol_up {
 			label = "volume_up";
 			gpios = <&tlmm 91 0x1>;
@@ -54,14 +52,8 @@
 		};
 	};
 
-
-
-
-
 	hall-ic{
 		compatible = "hall-switch";
-
-
 		interrupt-parent = <&tlmm>;
 		interrupts = <45 0x0>;
 		vddio-supply = <&pm8937_l6>;
@@ -81,10 +73,10 @@
 &pmi_haptic{
 	qcom,wave-play-rate-us = <4165>;
 	qcom,actuator-type = "erm";
-	qcom,lra-auto-res-mode="qwd";
-	qcom,lra-high-z="opt1";
-	qcom,lra-res-cal-period = <4>;
-	qcom,correct-lra-drive-freq;
+	qcom,erm-auto-res-mode="qwd";
+	qcom,erm-high-z="opt1";
+	qcom,erm-res-cal-period = <4>;
+	qcom,correct-erm-drive-freq;
 	qcom,misc-trim-error-rc19p2-clk-reg-present;
 };
 
@@ -94,106 +86,55 @@
 	qcom,front_flash_gpio_en=<&tlmm 13 0x00>;
 };
 
-
-
-
-
-
-
-
 &spi_6 {
-
-
-    qcom_fp@0 {
-        status = "ok";
-        compatible = "qcom,fingerprint";
-       vdd-supply = <&pm8937_l10>;
-       vio-supply = <&pm8937_l6>;
-        reg = <0>;
-        interrupt-parent = <&tlmm>;
-        interrupts = <17 0x1>;
-       qcom,irq-gpio = <&tlmm 17 0x00>;
-       qcom,reset-gpio = <&tlmm 19 0x00>;
-        spi-max-frequency = <8000000>;
-    };
-
+	qcom_fp@0 {
+		status = "ok";
+		compatible = "qcom,fingerprint";
+		vdd-supply = <&pm8937_l10>;
+		vio-supply = <&pm8937_l6>;
+		reg = <0>;
+		interrupt-parent = <&tlmm>;
+		interrupts = <17 0x1>;
+		qcom,irq-gpio = <&tlmm 17 0x00>;
+		qcom,reset-gpio = <&tlmm 19 0x00>;
+		spi-max-frequency = <8000000>;
+	};
 };
-
-
-
-
-
-
 
 &i2c_3{
-	    	synaptics@39 {
-				compatible = "synaptics,rmi4";
-				reg = <0x39>;
-				interrupt-parent = <&tlmm>;
-				interrupts = <65 0x2008>;
-		                vdd-supply = <&pm8937_l10>;
-		                vcc_i2c-supply = <&pm8937_l5>;
-				// pins used by touchscreen
-				pinctrl-names = "pmx_ts_active","pmx_ts_suspend";
-				pinctrl-0 = <&ts_int_active &ts_reset_active>;
-				pinctrl-1 = <&ts_int_suspend &ts_reset_suspend>;
-				synaptics,display-coords = <0 0 1080 1920>;
-				synaptics,panel-coords = <0 0 1080 1920>;
-				synaptics,irq-gpio = <&tlmm 65 0x2008>;
-				synaptics,reset-gpio = <&tlmm 64 0x0>;
-				synaptics,power-gpio = <&tlmm 68 0x0>;
-				synaptics,i2c-pull-up;
-				synaptics,power-down;
-				synaptics,disable-gpios;
-		                synaptics,power-delay-ms = <160>;
-		                synaptics,reset-delay-ms = <100>;
-				synaptics,fw-image-name = "YEJI_PR1723210-S3202_TINNO_P7021.img";
-			};
-
-		focaltech@38 {
-			compatible = "focaltech,5x06";
-			reg = <0x38>;
-			interrupt-parent = <&tlmm>;
-			interrupts = <65 0x2008>;
-			vdd-supply = <&pm8937_l10>;
-			vcc_i2c-supply = <&pm8937_l5>;
-			/* pins used by touchscreen */
-			pinctrl-names = "pmx_ts_active","pmx_ts_suspend";
-			pinctrl-0 = <&ts_int_active &ts_reset_active>;
-			pinctrl-1 = <&ts_int_suspend &ts_reset_suspend>;
-
-			focaltech,name = "ft6436";
-			focaltech,family-id = <0x36>;
-			focaltech,irq-gpio = <&tlmm 65 0x0>;
-			focaltech,reset-gpio = <&tlmm 64 0x0>;
-			focaltech,display-coords = <0 0 1080 1920>;
-			focaltech,panel-coords = <0 0 1080 1920>;
-			focaltech,no-force-update;
-			focaltech,i2c-pull-up;
-			focaltech,group-id = <1>;
-			focaltech,hard-reset-delay-ms = <20>;
-			focaltech,soft-reset-delay-ms = <200>;
-			focaltech,num-max-touches = <5>;
-			focaltech,fw-delay-aa-ms = <30>;
-			focaltech,fw-delay-55-ms = <30>;
-			focaltech,fw-upgrade-id1 = <0x54>;
-			focaltech,fw-upgrade-id2 = <0x2C>;
-			focaltech,fw-delay-readid-ms = <10>;
-			focaltech,fw-delay-era-flsh-ms = <2000>;
-			focaltech,fw-auto-cal;
-			focaltech,ignore-id-check;
-		};
+	focaltech@38 {
+		compatible = "focaltech,5x06";
+		reg = <0x38>;
+		interrupt-parent = <&tlmm>;
+		interrupts = <65 0x2008>;
+		vdd-supply = <&pm8937_l10>;
+		vcc_i2c-supply = <&pm8937_l5>;
+		/* pins used by touchscreen */
+		pinctrl-names = "pmx_ts_active","pmx_ts_suspend";
+		pinctrl-0 = <&ts_int_active &ts_reset_active>;
+		pinctrl-1 = <&ts_int_suspend &ts_reset_suspend>;
+		focaltech,name = "ft6436";
+		focaltech,family-id = <0x36>;
+		focaltech,irq-gpio = <&tlmm 65 0x0>;
+		focaltech,reset-gpio = <&tlmm 64 0x0>;
+		focaltech,display-coords = <0 0 1080 1920>;
+		focaltech,panel-coords = <0 0 1080 1920>;
+		focaltech,no-force-update;
+		focaltech,i2c-pull-up;
+		focaltech,group-id = <1>;
+		focaltech,hard-reset-delay-ms = <20>;
+		focaltech,soft-reset-delay-ms = <200>;
+		focaltech,num-max-touches = <5>;
+		focaltech,fw-delay-aa-ms = <30>;
+		focaltech,fw-delay-55-ms = <30>;
+		focaltech,fw-upgrade-id1 = <0x54>;
+		focaltech,fw-upgrade-id2 = <0x2C>;
+		focaltech,fw-delay-readid-ms = <10>;
+		focaltech,fw-delay-era-flsh-ms = <2000>;
+		focaltech,fw-auto-cal;
+		focaltech,ignore-id-check;
+	};
 };
-
-
-
-
-
-
-
-
-
-
 
 &sdhc_1 {
 	/* device core power supply */
@@ -276,15 +217,11 @@
 	hw-config = "single_dsi";
 };
 
-
-
-
 &mdss_dsi0 {
 	qcom,dsi-pref-prim-pan = <&dsi_nt35595_sharp_1080p_cmd>;
 	pinctrl-names = "mdss_default", "mdss_sleep";
 	pinctrl-0 = <&mdss_dsi_active &mdss_te_active>;
 	pinctrl-1 = <&mdss_dsi_suspend &mdss_te_suspend>;
-
 	qcom,platform-te-gpio = <&tlmm 24 0>;
 	qcom,platform-enable-gpio = <&tlmm 68 0>;
 	qcom,platform-reset-gpio = <&tlmm 60 0>;
@@ -293,12 +230,7 @@
 
 &dsi_nt35595_sharp_1080p_cmd {
 	qcom,panel-supply-entries = <&dsi_panel_pwr_supply>;
-
-
 };
-
-
-
 
 &pm8937_gpios {
 	gpio@c100 {
