--- a/arch/arm/boot/dts/qcom/msm8937-pmi8950-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-pmi8950-mtp.dtsi
@@ -46,8 +46,9 @@
 	qcom,battery-data = <&mtp_batterydata>;
 	qcom,cold-bat-decidegc = <(0)>;
 	qcom,cool-bat-decidegc = <(100)>;
-	qcom,hot-bat-decidegc = <600>;
+	qcom,hot-bat-decidegc = <650>;
 	qcom,warm-bat-decidegc = <450>;
+	qcom,cold-hot-jeita-hysteresis = <10 60>;
 	qcom,bad-battery-detection-enable;
 };
 
