--- a/arch/arm/boot/dts/qcom/msm8937-camera-sensor-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-camera-sensor-mtp.dtsi
@@ -11,6 +11,31 @@
  * GNU General Public License for more details.
  */
 
+&soc {
+	led_flash1: qcom,camera-flash {
+		cell-index = <1>;
+		compatible = "qcom,camera-flash";
+		qcom,flash-type = <1>;
+		qcom,flash-name = "led_flash1";
+		qcom,gpio-no-mux = <0>;
+		gpios = <&tlmm 13 0>, <&tlmm 12 0>;
+		qcom,gpio-flash-en = <0>;
+		qcom,gpio-flash-now = <1>;
+		qcom,gpio-req-tbl-num = <0 1>;
+		qcom,gpio-req-tbl-flags = <0 0>;
+		qcom,gpio-req-tbl-label = "FLASH_EN", "FLASH_NOW";
+
+	};
+
+	led_flash0: qcom,camera-flash {
+		cell-index = <0>;
+		compatible = "qcom,camera-flash";
+		qcom,flash-source = <&pmi8950_flash0 &pmi8950_flash1>;
+		qcom,torch-source = <&pmi8950_torch0 &pmi8950_torch1>;
+		qcom,switch-source = <&pmi8950_switch>;
+	};
+};
+
 &cci {
 	actuator0: qcom,actuator@0 {
 		cell-index = <0>;
